--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "prepare": "husky",
     "start": "cd server && npm start",
     "postinstall": "cd server && npm install --include=dev",
+    "db:dev": "npm run db:data:dev && npm run db:dev:prepare",
+    "db:dev:prepare": "npm run db:psql:dev < scripts/prepare-db.sql",
     "db:data:dev": "npm run db:schools:dev && npm run db:grunnkrets:dev && npm run db:vegadresse:dev",
-    "db:psql:dev": "docker exec -i /postgis /usr/bin/psql --user postgres",
     "db:schools:dev": "npm run db:schools:download && npm run db:psql:dev < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
     "db:schools:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Befolkning/Grunnskoler/PostGIS/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.zip",
     "db:schools:heroku": "npm run db:schools:download && psql $DATABASE_URL < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
@@ -22,7 +23,10 @@
     "db:vegadresse:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/MatrikkelenVegadresse/PostGIS/Basisdata_03_Oslo_25832_MatrikkelenVegadresse_PostGIS.zip",
     "db:vegadresse:heroku": "npm run db:vegadresse:download && psql $DATABASE_URL < tmp/Basisdata_03_Oslo_25832_MatrikkelenVegadresse_PostGIS.sql",
     "db:heroku:postgis": "echo 'create extension postgis' | psql $DATABASE_URL",
-    "db:heroku": "npm run db:heroku:postgis && npm run db:schools:heroku"
+    "db:data:heroku": "npm run db:schools:heroku && npm run db:grunnkrets:heroku && npm run db:vegadresse:heroku",
+    "db:heroku:prepare": "psql $DATABASE_URL < scripts/prepare-db.sql",
+    "db:heroku": "npm run db:heroku:postgis && npm run db:data:heroku && npm run db:heroku:prepare",
+    "db:psql:dev": "docker exec -i /postgis /usr/bin/psql --user postgres"
   },
   "repository": {
     "type": "git",
